--- a/env.example
+++ b/env.example
@@ -5,7 +5,7 @@
 
 # Backend API URL (REQUIRED)
 # For development: http://localhost:8000
-# For production: https://your-backend.onrender.com
+# For production: https://prontivus-backend-wnw2.onrender.com
 VITE_API_URL=http://localhost:8000
 
 # Optional: WebSocket URL (if different from API URL)
