--- a/env.example
+++ b/env.example
@@ -4,9 +4,10 @@
 # Copy this file to .env and update with your values
 
 # Backend API URL (REQUIRED)
-# For development: http://localhost:8000
-# For production: https://prontivus-backend-wnw2.onrender.com
-VITE_API_URL=http://localhost:8000
+# IMPORTANT: Must include /api/v1 suffix
+# For development: http://localhost:8000/api/v1
+# For production: https://prontivus-backend-wnw2.onrender.com/api/v1
+VITE_API_URL=http://localhost:8000/api/v1
 
 # Optional: WebSocket URL (if different from API URL)
 # VITE_WS_URL=ws://localhost:8000
