--- a/env.example
+++ b/env.example
@@ -7,7 +7,7 @@
 # IMPORTANT: Must include /api/v1 suffix
 # For development: http://localhost:8000/api/v1
 # For production: https://prontivus-backend-wnw2.onrender.com/api/v1
-VITE_API_URL=http://localhost:8000/api/v1
+VITE_API_URL=https://prontivus-backend-wnw2.onrender.com/api/v1
 
 # Optional: WebSocket URL (if different from API URL)
 # VITE_WS_URL=ws://localhost:8000
